<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/header_activity"></include>

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@color/panelGelap"
            android:clickable="true">

            <ImageView
                android:id="@+id/logoHeader"
                android:layout_width="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/logo" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/header"
            android:layout_marginTop="15dp"
            android:background="@color/panelAbu"
            android:orientation="horizontal"
            android:id="@+id/champion"
            android:onClick="Champion"
            >

            <ImageButton
                android:id="@+id/btnCham"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="50dp"
                android:backgroundTint="#00FFFFFF"
                android:onClick="Champion"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/hero"></ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/champion"
                android:layout_gravity="center"
                android:textSize="33dp"
                android:textColor="@color/text"
                android:onClick="Champion"
                ></TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/champion"
            android:layout_marginTop="15dp"
            android:background="@color/panelAbu"
            android:orientation="horizontal"
            android:id="@+id/info"
            android:onClick="Info"
            >

            <ImageButton
                android:id="@+id/btnInfo"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="70dp"
                android:backgroundTint="#00FFFFFF"
                android:onClick="Info"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/info"></ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Info"
                android:text="@string/info"
                android:layout_gravity="center"
                android:textSize="33dp"
                android:textColor="@color/text"
                ></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/info"
            android:layout_marginTop="15dp"
            android:background="@color/panelAbu"
            android:orientation="horizontal"
            android:id="@+id/aboutUs"
            android:onClick="AboutUs"
            >

            <ImageButton
                android:id="@+id/btnAboutUs"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="50dp"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="centerInside"
                android:onClick="AboutUs"
                app:srcCompat="@drawable/about_us"></ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="AboutUs"
                android:text="@string/about_us"
                android:layout_gravity="center"
                android:textSize="33dp"
                android:textColor="@color/text"
                ></TextView>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
