<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ProfileActivity">

        <RelativeLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_start_color"
            android:onClick="onClickBack"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/arrow"/>

            <Space
                android:id="@+id/space1"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/back1"/>

            <TextView
                android:id="@+id/kembali1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/space1"
                android:text="Kembali"
                android:textColor="@color/text"
                android:textSize="16sp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="About Us"
            android:textColor="@color/text"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:background="@color/text"
            android:columnOrderPreserved="false"
            android:orientation="vertical"
            android:padding="14dp"
            android:layout_marginBottom="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteX="0dp">



            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/polinema"/>


                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/nama"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="@id/lay1">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/nim"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="@id/lay1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/matkul"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:paddingBottom="100dp"
                    android:textStyle="bold" />>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>